--- a/slides.tex
+++ b/slides.tex
@@ -263,7 +263,7 @@ g' a b n = n : h
   \begin{center}
     \begin{minipage}{0.45\textwidth}
       \begin{itemize}
-        \item<3-> Closure alloc minus syntactic call sites? \only<5->{\xmark}
+        \item<3-> Definition minus call sites? \only<5->{\xmark}
         \item<6-> Don't lift multi-shot occurrences? \only<7->{\xmark}
         \item<8-> Cost model in $\mathbb{Z}_\infty$ \only<9->{\cmark}
       \end{itemize}
